<resources>
    <string name="app_name">Top of Reddit</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_post_provided">No post provided</string>
    <string name="not_a_post">Object provided not a post</string>
    <string name="dismiss_post">Dismiss post</string>
    <string name="comments_placeholder">No comments</string>
    <string name="title_placeholder">Title</string>
    <string name="hours_ago_placeholder">Hours ago</string>
    <string name="author_placeholder">Author</string>
    <string name="user_thumbnail">User thumbnail</string>
    <plurals name="x_comments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <plurals name="x_hours_ago" >
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
</resources>
